--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "afterwhen.co",
   "description": "",
   "dependencies": {
-    "next": "^2.0.0-beta.16"
+    "next": "7",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "node server.js"
-  },
-  "now": {
-    "alias": "afterwhen.co"
+    "start": "next start"
   }
 }
